# zapomnigo-client

./: .gitignore  Dockerfile  LICENSE  Procfile  README.md  health_check.sh  index.html  nginx.conf  package-lock.json  package.json
.github/workflows/: REVERT_PROD_IF_BROKEN.yml  deploy_prod.yml
client/: Procfile  index.html  package-lock.json  package.json
client/src/: App.tsx
client/src/app-context/: README.md
client/src/app-hooks/: README.md
client/src/app-utils/: README.md
public/: robots.txt  sitemap.xml
server/: .env  .gitignore  README.md  main.js  package-lock.json  package.json  pyproject.toml
server/src/: app.py  config.py
server/src/controllers/: __init__.py  utility_controller.py
server/src/routes/: __init__.py  routes.py  utility_routes.py
server/translations/: translation.bg-BG.json  translation.en-US.json
server/utils/: authMiddleware.js  dbConfig.js  jwt.js  passwordValidator.js
server/v1_routes/: auth.js  flashcards.js  folders.js  sets.js  statistics.js  utils.js
src/: App.tsx  Global.tsx  app.scss  fonts.scss  index.scss  main.tsx
src/app-common/: README.md  _common-styles.scss  _variables.scss  types.ts  utils.ts
src/app-components/: README.md
src/app-components/BackBtn/: BackBtn.jsx  _backBtn.scss
src/app-components/Create/: Create.tsx  _create.scss
src/app-context/: README.md  SomeComponent.tsx  navigationSlice.ts  someSlice.ts  store.ts
src/app-hooks/: README.md
src/app-utils/: AppRoutes.ts  axios.ts  fetchInstance.ts  jwt-handler.js  sanitizeSet.ts  soundManager.ts  speechSynthesis.ts
(+127 files in other folders)
