[tool.poetry]
name = "zapomnigo"
version = "0.1.0"
description = "zapomnigo python api"
authors = ["Ivan Obreshkov <ivanobreshkov12@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
flask = "^3.0.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
